src/global.css
:root {
  /* COLORS */
  --clr-neutral-000: #fff;
  --clr-neutral-050: rgb(247, 247, 247);
  --clr-neutral-100: rgb(236, 236, 236);
  --clr-neutral-200: #ddd;
  --clr-neutral-600: #666;
  --clr-neutral-900: #000;

  --clr-primary: #43c3d1;
  --clr-primary-500: #007bff;

  /* FONT FAMILIES */
  --ff-sans: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;

  /* FONT SIZES */
  --fs-normal: 1rem;
  --fs-small: 0.9rem;
  --fs-xs: 0.8rem;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--ff-sans);
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  & .extra-header {
    margin-bottom: -1rem;
  }
}

#app {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  align-items: center;
}

main {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

button {
  cursor: pointer;
}

.container {
  width: min(100% - 2rem, 1200px);
}

.sticky-navbar {
  position: sticky;
  top: 0;
  width: 100%;
  background-color: white;
  z-index: 2;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: center;
  padding: 1rem;
  /* border: 1px solid red; */
  gap: 1rem;
  .logo {
    display: flex;
    align-items: center;
  }

  .logo {
    text-decoration: none;
  }

  .logo img {
    height: 40px;
  }

  .logo-text {
    font-size: 26px;
    font-weight: bold;
    margin-left: 10px;
    color: #43c3d1;
    text-decoration: none;
    text-wrap: nowrap;
  }

  .logo-link {
    display: inline-block;
    text-decoration: none;
  }

  .logo-button {
    display: flex;
    align-items: center;
    padding: 10px 20px;
    background-color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    outline: none;

    .logo-button:hover {
      background-color: rgb(240, 240, 240);
    }
  }

  .search-bar {
    /* flex: 1; */
    /* display: flex; */
    /* justify-content: center; */
    /* border: 1px solid var(--clr-neutral-200); */
    margin-right: auto;
    width: 100%;
    max-width: 50rem;
    display: flex;
    align-items: center;
    position: relative;
    img {
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      left: 0.5rem;
      /* opacity: 0.33; */
    }
    input {
      width: 100%;
      padding: 0.5rem 1rem;
      border: 1px solid var(--clr-neutral-200);
      border-radius: 20px;
      font-size: 16px;
      padding-left: 2.25rem;
    }
  }

  .user-info {
    display: flex;
    align-items: center;
    gap: 1rem;
  }

  .user-info > a {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 1.5rem;
    height: 1.5rem;
    & div {
      width: 1.5rem;
      height: 1.5rem;
    }
  }

  .user-info > div {
    display: flex;
    align-items: center;
  }

  .user-info img {
    height: 24px;
  }

  /*.cart-count,
  .wishlist-count {
    position: absolute;
    top: -10px;
    right: -10px;
    background-color: red;
    color: white;
    border-radius: 50%;
    padding: 2px 5px;
    font-size: 12px;
  }*/

  .language span {
    margin-left: 5px;
    font-size: 14px;
  }

  .avatar {
    background-color: #ccc;
    color: white;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    min-width: 2rem;
    aspect-ratio: 1;
  }

  .user {
    font-size: var(--fs-small);
    line-height: 1;
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }

  .user-greeting-and-name {
    /* display: flex; */
  }
  .user-greeting {
    font-size: var(--fs-xs);
    color: var(--clr-neutral-600);
    text-wrap: nowrap;
    /* line-height: 10px; */
  }

  .user .dropdown-content {
    display: none;
    position: absolute;
    top: 50px;
    right: 0;
    background-color: white;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    overflow: hidden;
    z-index: 1000;
  }

  .user .dropdown-content a {
    display: block;
    padding: 10px 20px;
    color: #2a2a2a;
    text-decoration: none;
    font-size: 14px;
    transition: background-color 0.3s, color 0.3s;
  }

  .user .dropdown-content a:hover {
    background-color: #f1f1f1;
    color: #0073e6;
    /* text-decoration: underline; */
  }

  .user:hover .dropdown-content {
    display: block;
  }

  /* @media (max-width: 768px) {
    .search-bar input {
    }

    .user-info > div {
      margin-left: 10px;
    }
  } */
}

.extra-header {
  background-color: #061124;
  color: lightgray;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.75rem 1.5rem;
  font-size: 0.9rem;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1000;
  /* position: fixed; */

  .left-text {
    .ship-to {
      display: flex;
      align-items: center;
    }
    display: flex;
    align-items: center;
    color: #646e77;
    font-size: 0.875rem;
    font-weight: 300;
    gap: 0.5rem;
  }

  .left-text .icon {
    width: 1.2rem;
    height: 1.2rem;
    fill: #646e77;
  }

  .right-text {
    display: flex;
    align-items: center;
    gap: 1rem;
    font-weight: 300;
  }

  .icon-text {
    display: flex;
    align-items: center;
    gap: 0.5rem;
  }

  .icon {
    width: 1.2rem;
    height: 1.2rem;
    color: #42c3d3;
  }

  .country-dropdown {
    position: relative;
    display: flex;
    align-items: center;
  }

  .selected-country {
    padding: 0.25rem 0.5rem;
    border-radius: 4px;
    border: none;
    background-color: #061124;
    font-size: 0.9rem;
    color: lightgrey;
    cursor: pointer;
  }

  .dropdown-arrow {
    width: 1rem;
    height: 1rem;
    fill: #646e77;
  }

  .country-list {
    display: none;
    position: absolute;
    top: 100%;
    left: 0;
    background-color: #0a0a1e;
    min-width: 160px;
    z-index: 10;
    max-height: 200px;
    overflow-y: auto;
  }

  .country-item {
    padding: 12px 16px;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    color: lightgrey;
  }

  .country-item:hover {
    background-color: #1a1a2e;
  }

  .country-flag {
    width: 20px;
    height: 15px;
    margin-left: 10px;
  }

  #country-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 20px;
    padding: 20px;
  }

  .country-card {
    width: 200px;
    text-align: center;
    background-color: #1a1a2e;
    padding: 10px;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  }

  .country-card img {
    width: 100%;
    height: auto;
    border-radius: 5px;
  }

  .country-card h3 {
    margin-top: 10px;
    font-size: 1.2rem;
  }
}

footer {
  display: flex;
  width: 100%;
  flex-direction: column;
  align-items: center;
  border-top: 1px solid var(--clr-neutral-100);
  .media_payment {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 30px;
    padding: 15px 0;
    width: 100%;

    img {
      max-height: 20px;
    }

    img:nth-child(-n + 3) {
      max-height: 30px;
      margin: 0 15px;
    }

    img:nth-child(3) {
      border-right: 1px solid var(--clr-neutral-900);
      padding-right: 50px;
    }
  }

  .footer_content {
    display: flex;
    justify-content: center;
    background-color: rgb(240, 240, 240);
    width: 100%;
    .container {
      display: grid;
      grid-template-columns: repeat(4, 1fr);
      /* padding: 30px 50px; */
      padding-block: 2rem;
      gap: 2rem;
    }
    h3 {
      font-size: 13px;
      color: #666666;
      letter-spacing: 1.2px;
    }

    img {
      max-height: 15px;
      margin: 0.5rem;
    }

    li {
      list-style-type: none;
      font-size: 12px;
      margin: 15px 0;
      color: #666666;

      :hover {
        color: darkblue;
      }
    }

    a {
      text-decoration: none;
      color: inherit;
    }

    .github {
      display: flex;
      align-items: center;
      margin: 5px 0;
      img {
        max-height: 20px;
      }
    }
  }

  small {
    background-color: rgb(228, 228, 228);
    width: 100%;
    display: flex;
    justify-content: center;
    .container {
      display: flex;
      justify-content: space-between;
      align-items: center;
      padding-block: 15px;
      flex-wrap: wrap;
    }
    p,
    li {
      display: inline-block;
      color: #424242;
      font-size: 12px;
      /* padding: 0 10px; */
    }

    ul:nth-of-type(1) {
      li {
        border-right: 1px solid gray;
        padding-inline: 0.5rem;
        &:last-child {
          border: none;
        }
      }
    }
  }
}

/* MEDIA QUERIES ------------------------------------------------------------------------------ */

@media (max-width: 900px) {
  footer {
    .media_payment {
      display: none;
    }
    .footer_content {
      .container {
        grid-template-columns: repeat(3, 1fr);
        & section:last-child {
          grid-column: span 3;
        }
      }
    }
  }
  .sticky-navbar {
    .logo span {
      display: none;
    }
    .user-info {
      .language {
        display: none;
      }
    }
    .search-bar {
      max-width: 100%;
    }
  }
}

@media (max-width: 750px) {
  .extra-header {
    .right-text {
      display: none;
    }
  }
}

@media (max-width: 600px) {
  .footer_content {
    .container {
      grid-template-columns: repeat(3, 1fr);
      & section:not(:last-child) {
        display: none;
      }
    }
  }
  .sticky-navbar {
    .user {
      :not(.avatar) {
        display: none;
      }
    }
  }
}

